[tool.poetry]
name = "pytorch-tutorials"
version = "0.1.0"
description = ""
authors = ["baibai25 <kamuy.camel.0225@gmail.com>"]
readme = "README.md"
packages = [{include = "pytorch_tutorials"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
torch = "^1.13.1"
torchvision = "^0.14.1"
ipykernel = "^6.19.4"
transformers = {extras = ["ja"], version = "^4.28.1"}
torchmetrics = "^0.11.4"
black = {extras = ["jupyter"], version = "^23.3.0"}
nbqa = "^1.7.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.11.4"
mypy = "^0.991"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
